--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "react": "^17.0.2",
+    "react-art": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-native-web": "^0.17.5",
     "react-scripts": "4.0.3",
     "web-vitals": "^1.0.1"
   },
